added Pull Zoom tool

--- a/index.html
+++ b/index.html
@@ -27,23 +27,7 @@
         <span class="js-modal-toggle esri-interactive icon-ui-close right" aria-label="close-modal"></span>
         <h3 class="trailer-half text-blue">Configurable Application</h3>
         <div class="panel">
-          This application loads a web map or web scene and provides simple mapping capabilities via the ArcGIS API for JavaScript 4.x.
-        </div>
-        <div class="margin-left-2 leader-quarter">
-          This application is built using:
-          <ul>
-            <li>
-              <a href="https://developers.arcgis.com/javascript/" target="_blank">Esri ArcGIS API for Javascript 4.x</a>
-            </li>
-            <li>
-              <a href="https://github.com/Esri/application-base-js" target="_blank">Esri ApplicationBase</a>
-              <span>&nbsp;&&nbsp;</span>
-              <a href="https://github.com/Esri/configurable-app-examples-4x-js" target="_blank">Configurable App Example</a>
-            </li>
-            <li>
-              <a href="http://esri.github.io/calcite-web/" target="_blank">Esri Calcite Web Framework</a>
-            </li>
-          </ul>
+          Demo application for subsurface pipeline inspections.
         </div>
         <div class="leader-half">
           <img src="./assets/esri_science_of_where.png" class="left">
